--- a/views/soporte-tecnico.html
+++ b/views/soporte-tecnico.html
@@ -19,15 +19,15 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     
     <!-- CSS personalizado -->
-    <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="./css/soporte.css">
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/soporte.css">
 </head>
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top p-3">
         <div class="container">
-            <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
-                <img src="./image/logo.png" alt="SH Company Logo" class="logo-redondo" height="80">
+            <a class="navbar-brand d-flex align-items-center gap-2" href="../index.html">
+                <img src="../image/logo.png" alt="SH Company Logo" class="logo-redondo" height="80">
                 <span>SH COMPANY</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuNav">
@@ -35,7 +35,7 @@
             </button>
             <div class="collapse navbar-collapse" id="menuNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="empresa.html">Empresa</a></li>
                     <li class="nav-item"><a class="nav-link" href="planes.html">Planes</a></li>
                     <li class="nav-item"><a class="nav-link" href="pqrs.html">PQRS</a></li>
@@ -93,7 +93,7 @@
                                     <div class="card-inner">
                                         <div class="card-front">
                                             <div class="tech-avatar">
-                                                <img src="./image/personal/arnold.jpg" alt="Arnold jose trujillo mejia" class="avatar-img">
+                                                <img src="../image/personal/arnold.jpg" alt="Arnold jose trujillo mejia" class="avatar-img">
                                                 <div class="avatar-overlay">
                                                     <i class="fas fa-tools"></i>
                                                 </div>
@@ -134,7 +134,7 @@
                                     <div class="card-inner">
                                         <div class="card-front">
                                             <div class="tech-avatar">
-                                                <img src="./image/personal/dairo.jpg" alt="Dairo Andres Sampayo Delgado" class="avatar-img">
+                                                <img src="../image/personal/dairo.jpg" alt="Dairo Andres Sampayo Delgado" class="avatar-img">
                                                 <div class="avatar-overlay">
                                                     <i class="fas fa-laptop-code"></i>
                                                 </div>
@@ -174,7 +174,7 @@
                                     <div class="card-inner">
                                         <div class="card-front">
                                             <div class="tech-avatar">
-                                                <img src="./image/personal/leonardo.jpg" alt="Leonardo José cerra salazar " class="avatar-img">
+                                                <img src="../image/personal/leonardo.jpg" alt="Leonardo José cerra salazar " class="avatar-img">
                                                 <div class="avatar-overlay">
                                                     <i class="fas fa-network-wired"></i>
                                                 </div>
@@ -220,7 +220,7 @@
                                     <div class="card-inner">
                                         <div class="card-front">
                                             <div class="tech-avatar">
-                                                <img src="./image/personal/isai.jpg" alt="Isai Sampayo Delgado" class="avatar-img">
+                                                <img src="../image/personal/isai.jpg" alt="Isai Sampayo Delgado" class="avatar-img">
                                                 <div class="avatar-overlay">
                                                     <i class="fas fa-wifi"></i>
                                                 </div>
@@ -261,7 +261,7 @@
                                     <div class="card-inner">
                                         <div class="card-front">
                                             <div class="tech-avatar">
-                                                <img src="./image/personal/hermis.jpg" alt="Hermis David Arrieta Cuello" class="avatar-img">
+                                                <img src="../image/personal/hermis.jpg" alt="Hermis David Arrieta Cuello" class="avatar-img">
                                                 <div class="avatar-overlay">
                                                     <i class="fas fa-server"></i>
                                                 </div>
@@ -302,7 +302,7 @@
                                     <div class="card-inner">
                                         <div class="card-front">
                                             <div class="tech-avatar">
-                                                <img src="./image/personal/frank .jpg" alt="Frank Esney Alvarez Romero" class="avatar-img">
+                                                <img src="../image/personal/frank.jpg" alt="Frank Esney Alvarez Romero" class="avatar-img">
                                                 <div class="avatar-overlay">
                                                     <i class="fas fa-headset"></i>
                                                 </div>
@@ -688,8 +688,8 @@
 
         <!-- Logo -->
         <div class="col-md-4 mb-3 mb-md-0">
-          <a href="/soporte-tecnico.html" class="d-inline-block">
-            <img src="./image/logo.png" alt="SH COMPANY SAS Logo" class="footer-logo">
+          <a href="soporte-tecnico.html" class="d-inline-block">
+            <img src="../image/logo.png" alt="SH COMPANY SAS Logo" class="footer-logo">
           </a>
         </div>
 
@@ -714,7 +714,7 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="./js/soporte.js"></script>
+    <script src="../js/soporte.js"></script>
     <script>
         AOS.init({
             duration: 1000,
