--- a/views/empresa.html
+++ b/views/empresa.html
@@ -8,16 +8,16 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="./css/index.css">
-  <link rel="stylesheet" href="./css/empresa.css">
+  <link rel="stylesheet" href="../css/index.css">
+  <link rel="stylesheet" href="../css/empresa.css">
 </head>
 
 <body>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top p-3">
     <div class="container">
-      <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
-        <img src="./image/logo.png" alt="SH Company Logo" height="60">
+      <a class="navbar-brand d-flex align-items-center gap-2" href="../index.html">
+        <img src="../image/logo.png" alt="SH Company Logo" height="60">
         <span>SH COMPANY</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuNav">
@@ -25,7 +25,7 @@
       </button>
       <div class="collapse navbar-collapse" id="menuNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link active" href="empresa.html">Empresa</a></li>
                     <li class="nav-item"><a class="nav-link" href="planes.html">Planes</a></li>
                     <li class="nav-item"><a class="nav-link" href="pqrs.html">PQRS</a></li>
@@ -77,7 +77,7 @@
           </p>
         </div>
         <div class="imagen-container">
-          <img src="./image/mision.png" alt="Misión SH COMPANY" class="img-mision">
+          <img src="../image/mision.png" alt="Misión SH COMPANY" class="img-mision">
         </div>
       </div>
     </div>
@@ -90,7 +90,7 @@
     <div class="col-lg-10">
       <div class="box-texto">
         <div class="imagen-container">
-          <img src="./image/vision.png" alt="Visión SH COMPANY" class="img-vision">
+          <img src="../image/vision.png" alt="Visión SH COMPANY" class="img-vision">
         </div>
         <div class="texto-contenido">
           <h1 class="fw-bold text-orange display-5 mb-4">Visión</h1>
@@ -279,7 +279,7 @@
         <!-- Logo -->
         <div class="col-md-4 mb-3 mb-md-0">
           <a href="#" class="d-inline-block">
-            <img src="./image/logo.png" alt="SH COMPANY SAS Logo" class="footer-logo">
+            <img src="../image/logo.png" alt="SH COMPANY SAS Logo" class="footer-logo">
           </a>
         </div>
 
@@ -303,7 +303,7 @@
 
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="./js/empresa.js"></script>
+  <script src="../js/empresa.js"></script>
 </body>
 </html>
 </html>
