--- a/views/familiash.html
+++ b/views/familiash.html
@@ -18,15 +18,15 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     
     <!-- CSS personalizado -->
-    <link rel="stylesheet" href="./css/index.css?v=1.7">
-    <link rel="stylesheet" href="./css/familiash.css?v=1.7">
+    <link rel="stylesheet" href="../css/index.css?v=1.7">
+    <link rel="stylesheet" href="../css/familiash.css?v=1.7">
 </head>
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top p-3">
         <div class="container">
-            <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
-                <img src="./image/logo.png" alt="SH Company Logo" class="logo-redondo" height="80">
+            <a class="navbar-brand d-flex align-items-center gap-2" href="../index.html">
+                <img src="../image/logo.png" alt="SH Company Logo" class="logo-redondo" height="80">
                 <span>SH COMPANY</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuNav">
@@ -34,7 +34,7 @@
             </button>
             <div class="collapse navbar-collapse" id="menuNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="empresa.html">Empresa</a></li>
                     <li class="nav-item"><a class="nav-link" href="planes.html">Planes</a></li>
                     <li class="nav-item"><a class="nav-link" href="pqrs.html">PQRS</a></li>
@@ -240,6 +240,13 @@
                         </div>
                     </div>
 
+                    <!-- Eventos de Hoy -->
+                    <div class="today-events-section mt-4" data-aos="fade-up" data-aos-delay="150">
+                        <div id="todayEvents">
+                            <!-- Se generarán dinámicamente -->
+                        </div>
+                    </div>
+
                     <!-- Lista de Cumpleaños del Mes -->
                     <div class="mini-birthday-list mt-4" data-aos="fade-up" data-aos-delay="200">
                         <h5 class="text-center mb-3">
@@ -283,7 +290,7 @@
             <div class="row align-items-center text-center text-md-start">
                 <div class="col-md-4 mb-3 mb-md-0">
                     <a href="familiash.html" class="d-inline-block">
-                        <img src="./image/logo.png" alt="SH COMPANY SAS Logo" class="footer-logo">
+                        <img src="../image/logo.png" alt="SH COMPANY SAS Logo" class="footer-logo">
                     </a>
                 </div>
                 <div class="col-md-5">
@@ -304,7 +311,7 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="./js/familiash.js?v=2.0"></script>
+    <script src="../js/familiash.js?v=2.0"></script>
     <script>
         AOS.init({
             duration: 1000,
