--- a/views/planes.html
+++ b/views/planes.html
@@ -7,16 +7,16 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="./css/index.css">
-  <link rel="stylesheet" href="./css/planes.css">
+  <link rel="stylesheet" href="../css/index.css">
+  <link rel="stylesheet" href="../css/planes.css">
 </head>
 
 <body>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top p-3">
     <div class="container">
-      <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
-        <img src="./image/logo.png" alt="SH Company Logo" height="60">
+      <a class="navbar-brand d-flex align-items-center gap-2" href="../index.html">
+        <img src="../image/logo.png" alt="SH Company Logo" height="60">
         <span>SH COMPANY</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuNav">
@@ -24,7 +24,7 @@
       </button>
       <div class="collapse navbar-collapse" id="menuNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="empresa.html">Empresa</a></li>
                     <li class="nav-item"><a class="nav-link active" href="planes.html">Planes</a></li>
                     <li class="nav-item"><a class="nav-link" href="pqrs.html">PQRS</a></li>
@@ -151,7 +151,7 @@
                     <li><i class="fas fa-headset text-success"></i> Soporte técnico</li>
                   </ul>
                 </div>
-                <a href="https://api.whatsapp.com/send?phone=%2B573148686245&text=Hola%2C%20me%20interesa%20el%20Plan%20Hogar%20TV%20-%20Ayapel%20-%2030%20Mbps%20%2B%20TV%20por%20%2469.900%2Fmes.%20%C2%BFPodr%C3%ADan%20darme%20m%C3%A1s%20informaci%C3%B3n%3F" target="_blank" class="plan-btn">
+                <a href="https://api.whatsapp.com/send?phone=%2B573148686245&text=Hola%2C%20me%20interesa%20el%20Plan%20SH%20D%C3%9AO%20PRIME%20-%20Ayapel%20-%20200%20Mbps%20%2B%20TV%20por%20%2470.000%2Fmes.%20%C2%BFPodr%C3%ADan%20darme%20m%C3%A1s%20informaci%C3%B3n%3F" target="_blank" class="plan-btn">
                   <i class="fab fa-whatsapp me-2"></i>Contratar Plan
                 </a>
               </div>
@@ -191,7 +191,7 @@
                     <li><i class="fas fa-headset text-success"></i> Soporte técnico</li>
                   </ul>
                 </div>
-                <a href="https://api.whatsapp.com/send?phone=%2B573148686245&text=Hola%2C%20me%20interesa%20el%20Plan%20Familia%20TV%20Plus%20-%20Ayapel%20-%2060%20Mbps%20%2B%20TV%20por%20%24109.900%2Fmes.%20%C2%BFPodr%C3%ADan%20darme%20m%C3%A1s%20informaci%C3%B3n%3F" target="_blank" class="plan-btn">
+                <a href="https://api.whatsapp.com/send?phone=%2B573148686245&text=Hola%2C%20me%20interesa%20el%20Plan%20SH%20D%C3%9AO%20TITAN%20-%20Ayapel%20-%20250%20Mbps%20%2B%20TV%20por%20%2490.000%2Fmes.%20%C2%BFPodr%C3%ADan%20darme%20m%C3%A1s%20informaci%C3%B3n%3F" target="_blank" class="plan-btn">
                   <i class="fab fa-whatsapp me-2"></i>Contratar Plan
                 </a>
               </div>
@@ -231,7 +231,7 @@
                     <li><i class="fas fa-headset text-success"></i> Soporte técnico</li>
                   </ul>
                 </div>
-                <a href="https://api.whatsapp.com/send?phone=%2B573148686245&text=Hola%2C%20me%20interesa%20el%20Plan%20Empresarial%20TV%20-%20Ayapel%20-%20100%20Mbps%20%2B%20TV%20por%20%24169.900%2Fmes.%20%C2%BFPodr%C3%ADan%20darme%20m%C3%A1s%20informaci%C3%B3n%3F" target="_blank" class="plan-btn">
+                <a href="https://api.whatsapp.com/send?phone=%2B573148686245&text=Hola%2C%20me%20interesa%20el%20Plan%20SH%20D%C3%9AO%20INFINITY%20-%20Ayapel%20-%20300%20Mbps%20%2B%20TV%20por%20%24110.000%2Fmes.%20%C2%BFPodr%C3%ADan%20darme%20m%C3%A1s%20informaci%C3%B3n%3F" target="_blank" class="plan-btn">
                   <i class="fab fa-whatsapp me-2"></i>Contratar Plan
                 </a>
               </div>
@@ -277,7 +277,7 @@
                     <li><i class="fas fa-headset text-success"></i> Soporte técnico</li>
                   </ul>
                 </div>
-                <a href="https://api.whatsapp.com/send?phone=%2B573148686245&text=Hola%2C%20me%20interesa%20el%20Plan%20Hogar%20B%C3%A1sico%20-%20Ayapel%20-%2030%20Mbps%20por%20%2449.900%2Fmes.%20%C2%BFPodr%C3%ADan%20darme%20m%C3%A1s%20informaci%C3%B3n%3F" target="_blank" class="plan-btn">
+                <a href="https://api.whatsapp.com/send?phone=%2B573148686245&text=Hola%2C%20me%20interesa%20el%20Plan%20SH%20ARC%20CORE%20-%20Ayapel%20-%20100%20Mbps%20por%20%2455.000%2Fmes.%20%C2%BFPodr%C3%ADan%20darme%20m%C3%A1s%20informaci%C3%B3n%3F" target="_blank" class="plan-btn">
                   <i class="fab fa-whatsapp me-2"></i>Contratar Plan
                 </a>
               </div>
@@ -319,7 +319,7 @@
                     <li><i class="fas fa-mobile-alt text-success"></i> Hasta 4 dispositivos conectados</li>
                   </ul>
                 </div>
-                <a href="https://api.whatsapp.com/send?phone=%2B573148686245&text=Hola%2C%20me%20interesa%20el%20Plan%20Familia%20Plus%20-%20Ayapel%20-%2060%20Mbps%20por%20%2479.900%2Fmes.%20%C2%BFPodr%C3%ADan%20darme%20m%C3%A1s%20informaci%C3%B3n%3F" target="_blank" class="plan-btn">
+                <a href="https://api.whatsapp.com/send?phone=%2B573148686245&text=Hola%2C%20me%20interesa%20el%20Plan%20SH%20STRIKE%20-%20Ayapel%20-%20140%20Mbps%20por%20%2475.000%2Fmes.%20%C2%BFPodr%C3%ADan%20darme%20m%C3%A1s%20informaci%C3%B3n%3F" target="_blank" class="plan-btn">
                   <i class="fab fa-whatsapp me-2"></i>Contratar Plan
                 </a>
               </div>
@@ -362,7 +362,7 @@
                     <li><i class="fas fa-briefcase text-success"></i>  Ideal para trabajo remoto y entretenimiento total</li>
                   </ul>
                 </div>
-                <a href="https://api.whatsapp.com/send?phone=%2B573148686245&text=Hola%2C%20me%20interesa%20el%20Plan%20Empresarial%20-%20Ayapel%20-%20100%20Mbps%20por%20%24129.900%2Fmes.%20%C2%BFPodr%C3%ADan%20darme%20m%C3%A1s%20informaci%C3%B3n%3F" target="_blank" class="plan-btn">
+                <a href="https://api.whatsapp.com/send?phone=%2B573148686245&text=Hola%2C%20me%20interesa%20el%20Plan%20SH%20OMEGA%20-%20Ayapel%20-%20180%20Mbps%20por%20%2495.000%2Fmes.%20%C2%BFPodr%C3%ADan%20darme%20m%C3%A1s%20informaci%C3%B3n%3F" target="_blank" class="plan-btn">
                   <i class="fab fa-whatsapp me-2"></i>Contratar Plan
                 </a>
               </div>
@@ -419,7 +419,7 @@
                     <li><i class="fas fa-headset text-success"></i> Soporte técnico</li>
                   </ul>
                 </div>
-                <a href="https://api.whatsapp.com/send?phone=%2B573148686245&text=Hola%2C%20me%20interesa%20el%20Plan%20Rural%20TV%20-%20Las%20Delicias%20-%2020%20Mbps%20%2B%20TV%20por%20%2454.900%2Fmes.%20%C2%BFPodr%C3%ADan%20darme%20m%C3%A1s%20informaci%C3%B3n%3F" target="_blank" class="plan-btn">
+                <a href="https://api.whatsapp.com/send?phone=%2B573148686245&text=Hola%2C%20me%20interesa%20el%20Plan%20ZENTRIX%20PLAN%20-%20Las%20Delicias%20-%2080%20Mbps%20%2B%20TV%20por%20%2475.000%2Fmes.%20%C2%BFPodr%C3%ADan%20darme%20m%C3%A1s%20informaci%C3%B3n%3F" target="_blank" class="plan-btn">
                   <i class="fab fa-whatsapp me-2"></i>Contratar Plan
                 </a>
               </div>
@@ -459,7 +459,7 @@
                     <li><i class="fas fa-headset text-success"></i> Soporte técnico</li>
                   </ul>
                 </div>
-                <a href="https://api.whatsapp.com/send?phone=%2B573148686245&text=Hola%2C%20me%20interesa%20el%20Plan%20Rural%20TV%20Plus%20-%20Las%20Delicias%20-%2040%20Mbps%20%2B%20TV%20por%20%2484.900%2Fmes.%20%C2%BFPodr%C3%ADan%20darme%20m%C3%A1s%20informaci%C3%B3n%3F" target="_blank" class="plan-btn">
+                <a href="https://api.whatsapp.com/send?phone=%2B573148686245&text=Hola%2C%20me%20interesa%20el%20Plan%20TRINOX%20PLUS%20-%20Las%20Delicias%20-%20100%20Mbps%20%2B%20TV%20por%20%2495.000%2Fmes.%20%C2%BFPodr%C3%ADan%20darme%20m%C3%A1s%20informaci%C3%B3n%3F" target="_blank" class="plan-btn">
                   <i class="fab fa-whatsapp me-2"></i>Contratar Plan
                 </a>
               </div>
@@ -491,7 +491,7 @@
                 </div>
                 <div class="plan-features">
                   <ul>
-                    <li><i class="fas fa-wifi text-success"></i> Internet 300 Mbps</li>
+                    <li><i class="fas fa-wifi text-success"></i> Internet 120 Mbps</li>
                     <li><i class="fas fa-tv text-success"></i> 70+ canales HD</li>
                     <li><i class="fas fa-satellite text-success"></i> Canales nacionales e internaionales</li>
                     <li><i class="fas fa-play-circle text-success"></i> Streaming fluido en múltiples dispositivos</li>
@@ -499,7 +499,7 @@
                     <li><i class="fas fa-headset text-success"></i> Soporte técnico</li>
                   </ul>
                 </div>
-                <a href="https://api.whatsapp.com/send?phone=%2B573148686245&text=Hola%2C%20me%20interesa%20el%20Plan%20Rural%20TV%20Premium%20-%20Las%20Delicias%20-%2060%20Mbps%20%2B%20TV%20por%20%24119.900%2Fmes.%20%C2%BFPodr%C3%ADan%20darme%20m%C3%A1s%20informaci%C3%B3n%3F" target="_blank" class="plan-btn">
+                <a href="https://api.whatsapp.com/send?phone=%2B573148686245&text=Hola%2C%20me%20interesa%20el%20Plan%20ALTURION%20MAX%20-%20Las%20Delicias%20-%20120%20Mbps%20%2B%20TV%20por%20%24115.000%2Fmes.%20%C2%BFPodr%C3%ADan%20darme%20m%C3%A1s%20informaci%C3%B3n%3F" target="_blank" class="plan-btn">
                   <i class="fab fa-whatsapp me-2"></i>Contratar Plan
                 </a>
               </div>
@@ -531,9 +531,10 @@
                       <i class="fas fa-globe-americas"></i>
                       <span>Solo Internet</span>
                     </div>
+                  </div>
                 </div>
                 <div class="plan-price">
-                  <span class="price">60.000</span>
+                  <span class="price">$60.000</span>
                   <span class="period">/mes</span>
                 </div>
                 <div class="plan-features">
@@ -544,7 +545,7 @@
                     <li><i class="fas fa-headset text-success"></i> Soporte técnico</li>
                   </ul>
                 </div>
-                <a href="https://api.whatsapp.com/send?phone=%2B573148686245&text=Hola%2C%20me%20interesa%20el%20Plan%20Rural%20B%C3%A1sico%20-%20Las%20Delicias%20-%2020%20Mbps%20por%20%2439.900%2Fmes.%20%C2%BFPodr%C3%ADan%20darme%20m%C3%A1s%20informaci%C3%B3n%3F" target="_blank" class="plan-btn">
+                <a href="https://api.whatsapp.com/send?phone=%2B573148686245&text=Hola%2C%20me%20interesa%20el%20Plan%20RAVEX%20START%20-%20Las%20Delicias%20-%2050%20Mbps%20por%20%2460.000%2Fmes.%20%C2%BFPodr%C3%ADan%20darme%20m%C3%A1s%20informaci%C3%B3n%3F" target="_blank" class="plan-btn">
                   <i class="fab fa-whatsapp me-2"></i>Contratar Plan
                 </a>
               </div>
@@ -586,7 +587,7 @@
                     <li><i class="fas fa-mobile-alt text-success"></i> Hasta 4 dispositivos conectados</li>
                   </ul>
                 </div>
-                <a href="https://api.whatsapp.com/send?phone=%2B573148686245&text=Hola%2C%20me%20interesa%20el%20Plan%20Rural%20Plus%20-%20Las%20Delicias%20-%2040%20Mbps%20por%20%2459.900%2Fmes.%20%C2%BFPodr%C3%ADan%20darme%20m%C3%A1s%20informaci%C3%B3n%3F" target="_blank" class="plan-btn">
+                <a href="https://api.whatsapp.com/send?phone=%2B573148686245&text=Hola%2C%20me%20interesa%20el%20Plan%20VELTRAX%20NET%20-%20Las%20Delicias%20-%2080%20Mbps%20por%20%2490.000%2Fmes.%20%C2%BFPodr%C3%ADan%20darme%20m%C3%A1s%20informaci%C3%B3n%3F" target="_blank" class="plan-btn">
                   <i class="fab fa-whatsapp me-2"></i>Contratar Plan
                 </a>
               </div>
@@ -627,8 +628,9 @@
                     <li><i class="fas fa-headset text-success"></i> Soporte técnico</li>
                     <li><i class="fas fa-wifi text-success"></i> Hasta 8 dispositivos conectados</li>
                     <li><i class="fas fa-briefcase text-success"></i>  Ideal para trabajo remoto y entretenimiento total</li>
+                  </ul>
                 </div>
-                <a href="https://api.whatsapp.com/send?phone=%2B573148686245&text=Hola%2C%20me%20interesa%20el%20Plan%20Rural%20Premium%20-%20Las%20Delicias%20-%2060%20Mbps%20por%20%2489.900%2Fmes.%20%C2%BFPodr%C3%ADan%20darme%20m%C3%A1s%20informaci%C3%B3n%3F" target="_blank" class="plan-btn">
+                <a href="https://api.whatsapp.com/send?phone=%2B573148686245&text=Hola%2C%20me%20interesa%20el%20Plan%20QUANTOR%20LINE%20-%20Las%20Delicias%20-%20100%20Mbps%20por%20%24105.000%2Fmes.%20%C2%BFPodr%C3%ADan%20darme%20m%C3%A1s%20informaci%C3%B3n%3F" target="_blank" class="plan-btn">
                   <i class="fab fa-whatsapp me-2"></i>Contratar Plan
                 </a>
               </div>
@@ -733,8 +735,8 @@
 
         <!-- Logo -->
         <div class="col-md-4 mb-3 mb-md-0">
-          <a href="/planes.html" class="d-inline-block">
-            <img src="./image/logo.png" alt="SH COMPANY SAS Logo" class="footer-logo">
+          <a href="planes.html" class="d-inline-block">
+            <img src="../image/logo.png" alt="SH COMPANY SAS Logo" class="footer-logo">
           </a>
         </div>
 
@@ -758,7 +760,7 @@
 
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="./js/planes.js"></script>
+  <script src="../js/planes.js"></script>
 </body>
 </html>
 </html>
